--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -1,5 +1,5 @@
 # Any C++ source files needed to build this target (shell-app).
-add_executable(shell-app
+add_executable(human_tracker
   # list of source cpp files:
   main.cpp
   )
@@ -7,16 +7,15 @@ add_executable(shell-app
 # Any include directories needed to build this target.
 # Note: we do not need to specify the include directories for the
 # dependent libraries, they are automatically included.
-target_include_directories(shell-app PUBLIC
+target_include_directories(human_tracker PUBLIC
   # list inclue directories:
   ${CMAKE_SOURCE_DIR}/include
 )
 
 # Any dependent libraires needed to build this target.
-target_link_libraries(shell-app PUBLIC -static
+target_link_libraries(human_tracker PUBLIC -static
   # list of libraries
-  myLib1
-  myLib2
+  Human_Tracker_Team7_lib
   )
 
   
