--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,7 +6,10 @@ target_include_directories(Human_Tracker PUBLIC
   # list of directories:
   .
   AcmeBot/include/
-  )
+  ${OpenCV_INCLUDE_DIRS}
+	${EIGEN3_INCLUDE_DIR}
+)
 
+target_link_libraries(Human_Tracker PUBLIC ${OpenCV_LIBS} ${EIGEN3_LIBS})
 
-  add_subdirectory(AcmeBot)
+add_subdirectory(AcmeBot)
