--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_library(Human_Tracker
+add_library(Human_Tracker SHARED
   main.cpp
 )
 
@@ -6,10 +6,10 @@ target_include_directories(Human_Tracker PUBLIC
   # list of directories:
   .
   AcmeBot/include/
-  ${OpenCV_INCLUDE_DIRS}
 	${EIGEN3_INCLUDE_DIR}
+  ${OpenCV_INCLUDE_DIRS}
 )
 
-target_link_libraries(Human_Tracker PUBLIC ${OpenCV_LIBS} ${EIGEN3_LIBS})
-
 add_subdirectory(AcmeBot)
+
+target_link_libraries(Human_Tracker PUBLIC AcmeBot ${OpenCV_LIBS} ${EIGEN3_LIBS})
