Changed file name to lowercase as per Google cpp style

--- a/src/AcmeBot/CMakeLists.txt
+++ b/src/AcmeBot/CMakeLists.txt
@@ -1,8 +1,8 @@
 # Declare the library target first
 add_library(AcmeBot
-    AcmeBot.cpp
-    Detector.cpp
-    Tracker.cpp
+        acmebot.cpp
+        detector.cpp
+        tracker.cpp
 )
 
 # Specify the include directory
