--- a/src/AcmeVision/CMakeLists.txt
+++ b/src/AcmeVision/CMakeLists.txt
@@ -1,8 +1,9 @@
 # Declare the library target first
-add_library(AcmeBot SHARED
-        acmebot.cpp
+add_library(AcmeVisionLib SHARED
+        acme_vision.cpp
         detector.cpp
         tracker.cpp
+        Utils.cpp
 )
 
 # set(ACMEBOT_INCLUDE_DIRS PARENT_SCOPE ${CMAKE_CURRENT_SOURCE_DIR}/include)
@@ -10,10 +11,10 @@ set(ACMEBOT_INCLUDE_DIRS "${CMAKE_CURRENT_LIST_DIR}/include" CACHE STRING "AcmeB
 message(STATUS ${ACMEBOT_INCLUDE_DIRS})
 
 # Specify the include directory
-target_include_directories(AcmeBot PUBLIC
+target_include_directories(AcmeVisionLib PUBLIC
     ${CMAKE_CURRENT_SOURCE_DIR}/include
     ${OpenCV_INCLUDE_DIRS}
 )
 
-target_link_libraries(AcmeBot PUBLIC ${OpenCV_LIBS})
+target_link_libraries(AcmeVisionLib PUBLIC ${OpenCV_LIBS} readerwriterqueue spdlog::spdlog)
 
